# iree.gd

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  generate_gdextension_config.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_proposal.yml
.github/workflows/: build_addon.yml  build_android.yml  build_ios.yml  build_linux.yml  build_linux_arm.yml  build_macos.yml  build_windows.yml  bundle.yml  iree-gd-build-x86_64-linux.yml  iree-gd-build-x86_64-macos.yml  iree-gd-build-x86_64-windows.yml  iree-gd-build.yml  lint.yml  publish.yml  runner.yml
cmake/: linux_arm32.toolchain.cmake  linux_arm64.toolchain.cmake
sample/: .gitignore  LICENSE  icon.svg.import  project.godot
sample/addons/iree-gd/: iree-gd.gdextension  iree-gd.gdextension.uid  iree_dock.gd  iree_dock.tscn  iree_module_runner.gd  logo.svg.import  model_downloader.gd  model_refresh.gd  plugin.cfg
sample/addons/iree-zoo/google_movenet_tfLite_singlepose_lightning_tflite_int8/: google_movenet_tfLite_singlepose_lightning_tflite_int8.gd  iree.llvm-cpu.vmfb
sample/addons/iree-zoo/kaggle_esrgan_tf2_tfLite_esrgan_tf2/: kaggle_esrgan_tf2_tfLite_esrgan_tf2.gd
sample/assets/audio/8bit_jingles/: jingles_NES00.ogg.import  jingles_NES01.ogg.import  jingles_NES02.ogg.import  jingles_NES03.ogg.import  jingles_NES04.ogg.import  jingles_NES05.ogg.import  jingles_NES06.ogg.import  jingles_NES07.ogg.import  jingles_NES08.ogg.import  jingles_NES09.ogg.import  jingles_NES10.ogg.import  jingles_NES11.ogg.import  jingles_NES12.ogg.import  jingles_NES13.ogg.import  jingles_NES14.ogg.import  jingles_NES15.ogg.import  jingles_NES16.ogg.import
sample/assets/audio/hit_jingles/: jingles_HIT00.ogg.import  jingles_HIT01.ogg.import  jingles_HIT02.ogg.import  jingles_HIT03.ogg.import  jingles_HIT04.ogg.import  jingles_HIT05.ogg.import  jingles_HIT06.ogg.import  jingles_HIT07.ogg.import  jingles_HIT08.ogg.import  jingles_HIT09.ogg.import  jingles_HIT10.ogg.import  jingles_HIT11.ogg.import  jingles_HIT12.ogg.import  jingles_HIT13.ogg.import  jingles_HIT14.ogg.import  jingles_HIT15.ogg.import  jingles_HIT16.ogg.import
sample/assets/audio/impact/: footstep_carpet_000.ogg.import  footstep_carpet_001.ogg.import  footstep_carpet_002.ogg.import  footstep_carpet_003.ogg.import  footstep_carpet_004.ogg.import  footstep_concrete_000.ogg.import  footstep_concrete_001.ogg.import  footstep_concrete_002.ogg.import  footstep_concrete_003.ogg.import  footstep_concrete_004.ogg.import  footstep_grass_000.ogg.import  footstep_grass_001.ogg.import  footstep_grass_002.ogg.import  footstep_grass_003.ogg.import  footstep_grass_004.ogg.import  footstep_snow_000.ogg.import  footstep_snow_001.ogg.import  footstep_snow_002.ogg.import  footstep_snow_003.ogg.import  footstep_snow_004.ogg.import  footstep_wood_000.ogg.import  footstep_wood_001.ogg.import  footstep_wood_002.ogg.import  footstep_wood_003.ogg.import  footstep_wood_004.ogg.import  impactBell_heavy_000.ogg.import  impactBell_heavy_001.ogg.import  impactBell_heavy_002.ogg.import  impactBell_heavy_003.ogg.import  impactBell_heavy_004.ogg.import  impactGeneric_light_000.ogg.import  impactGeneric_light_001.ogg.import  impactGeneric_light_002.ogg.import  impactGeneric_light_003.ogg.import  impactGeneric_light_004.ogg.import  impactGlass_heavy_000.ogg.import  impactGlass_heavy_001.ogg.import  impactGlass_heavy_002.ogg.import  impactGlass_heavy_003.ogg.import  impactGlass_heavy_004.ogg.import  (+90 more)
sample/assets/audio/pizzicato_jingles/: jingles_PIZZI00.ogg.import  jingles_PIZZI01.ogg.import  jingles_PIZZI02.ogg.import  (+14 more)
sample/assets/example_images/: A_young_woman_reaching_both_sides__She_stands_barefoot_against_a_colou_S316788911_St8_G1.png.import  anime_girl_input.jpeg.import  baboon.png.import  human_face_input.jpeg.import  pose.png.import  pose2.png.import
sample/assets/fonts/: Kenney Blocks.ttf.import  Kenney Future Narrow.ttf.import  Kenney Future.ttf.import  Kenney High Square.ttf.import  Kenney High.ttf.import  Kenney Mini Square Mono.ttf.import  Kenney Mini Square.ttf.import  Kenney Mini.ttf.import  Kenney Pixel Square.ttf.import  Kenney Pixel.ttf.import  Kenney Rocket Square.ttf.import  Kenney Rocket.ttf.import
sample/bytecodes/esrgan/: .gitignore  README.md  esrgan.metal.vmfb.uid  esrgan.vulkan.vmfb.uid
sample/bytecodes/mediapipe_pose_landmark_full/: README.md  mediapipe_pose_landmark_full.metal.vmfb.uid  mediapipe_pose_landmark_full.vulkan.vmfb.uid
sample/bytecodes/singlepose_lightning_int8/: singlepose_lightning_int8.metal.vmfb.uid  singlepose_lightning_int8.vulkan.vmfb.uid
sample/bytecodes/singlepose_thunder/: singlepose_thunder.metal.vmfb.uid  singlepose_thunder.vulkan.vmfb.uid
sample/extensions/iree-gd/: iree-gd.gdextension
sample/resources/iree_modules/: README.md  esrgan.tres
sample/resources/styleboxes/: blue.tres  green.tres  green_outline.tres  red.tres  red_outline.tres  white.tres  white_pressed.tres  yellow_outline.tres
sample/resources/themes/: default_themes.tres
sample/scenes/main/: esrgan_texture.gd  esrgan_texture.gd.uid  main.tscn  progress.gd  progress.gd.uid
sample/scenes/mediapipe_pose_landmark_full/: mediapipe_pose_landmark_full.gd  mediapipe_pose_landmark_full.gd.uid  mediapipe_pose_landmark_full.tscn
sample/scenes/pose_detection/: pose_detection.gd  pose_detection.gd.uid  pose_detection.tscn
sample/scenes/pose_detection_thunder/: pose_detection_thunder.gd  pose_detection_thunder.gd.uid  pose_detection_thunder.tscn
src/: image_utility.cpp  image_utility.h  iree.cpp  iree.h  iree_buffer_view.cpp  iree_buffer_view.h  iree_data.cpp  iree_data.h  iree_device.cpp  iree_device.h  iree_error.h  iree_instance.cpp  iree_instance.h  iree_io_list.cpp  iree_io_list.h  iree_list.cpp  iree_list.h  iree_module.cpp  iree_module.h  iree_tensor.cpp  iree_tensor.h  raw_byte_array.cpp  raw_byte_array.h  register_types.cpp  register_types.h  resource_format_loader_iree_module.cpp  resource_format_loader_iree_module.h
tools/: README.md
tools/tflite/: requirements.txt
tools/tflite-vulkan-vmfb-generate/: README.md  main.py
(+167 files in other folders)
